; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/pch_gbe/extr_pch_gbe_main.c_pch_gbe_mac_reset_hw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/pch_gbe/extr_pch_gbe_main.c_pch_gbe_mac_reset_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pch_gbe_hw = type { %struct.TYPE_4__, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32, i32 }

@PCH_GBE_ALL_RST = common dso_local global i32 0, align 4
@PCH_GBE_MODE_GMII_ETHER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pch_gbe_hw*)* @pch_gbe_mac_reset_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pch_gbe_mac_reset_hw(%struct.pch_gbe_hw* %0) #0 {
  %2 = alloca %struct.pch_gbe_hw*, align 8
  store %struct.pch_gbe_hw* %0, %struct.pch_gbe_hw** %2, align 8
  %3 = load %struct.pch_gbe_hw*, %struct.pch_gbe_hw** %2, align 8
  %4 = call i32 @pch_gbe_mac_read_mac_addr(%struct.pch_gbe_hw* %3)
  %5 = load i32, i32* @PCH_GBE_ALL_RST, align 4
  %6 = load %struct.pch_gbe_hw*, %struct.pch_gbe_hw** %2, align 8
  %7 = getelementptr inbounds %struct.pch_gbe_hw, %struct.pch_gbe_hw* %6, i32 0, i32 1
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = call i32 @iowrite32(i32 %5, i32* %9)
  %11 = load %struct.pch_gbe_hw*, %struct.pch_gbe_hw** %2, align 8
  %12 = getelementptr inbounds %struct.pch_gbe_hw, %struct.pch_gbe_hw* %11, i32 0, i32 1
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* @PCH_GBE_ALL_RST, align 4
  %16 = call i32 @pch_gbe_wait_clr_bit(i32* %14, i32 %15)
  %17 = load %struct.pch_gbe_hw*, %struct.pch_gbe_hw** %2, align 8
  %18 = load %struct.pch_gbe_hw*, %struct.pch_gbe_hw** %2, align 8
  %19 = getelementptr inbounds %struct.pch_gbe_hw, %struct.pch_gbe_hw* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @pch_gbe_mac_mar_set(%struct.pch_gbe_hw* %17, i32 %21, i32 0)
  ret void
}

declare dso_local i32 @pch_gbe_mac_read_mac_addr(%struct.pch_gbe_hw*) #1

declare dso_local i32 @iowrite32(i32, i32*) #1

declare dso_local i32 @pch_gbe_wait_clr_bit(i32*, i32) #1

declare dso_local i32 @pch_gbe_mac_mar_set(%struct.pch_gbe_hw*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
